<resources>
    <string name="app_name">Events in Brisbane</string>
    <string name="action_about">About</string>
    <string name="event_image">Event image</string>
    <!-- TEST -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!-- REAL -->
    <string name="banner_ad_unit_id">ca-app-pub-5482522486671782/9207865759</string>
    <string name="about">
        Data supplied by Brisbane City Council at data.brisbane.qld.gov.au. \n
        Icon made by Scott de Jonge from www.flaticon.com\n
        Icons supplied by Google from design.google.com/icons and Freepik from www.flaticon.com\n
        © Jonathan Cromie 2016. All rights reserved.\n
        Please send all enquiries to joncromie@gmail.com

    </string>

    <string name="action_settings">Settings</string>
    <string name="action_background">Background</string>
    <string name="action_high_scores">High Scores</string>
    <string name="action_help">Help &amp; Feedback</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_background">Backgrounds</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="title_activity_start">Android Hunt</string>
    <string name="title_activity_game">Play</string>
    <string name="player_name">Player Name</string>
    <string name="enter_name">Enter name here</string>
    <string name="text_about">
        © Jonathan Cromie 2015. All rights reserved.\n
        Please send all enquiries to joncromie@gmail.com
    </string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for events</string>
    <string name="title_activity_search_results">Search Results</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sort">Sort</string>
    <string name="sort_title">Sort by title</string>
    <string name="sort_date">Sort by date</string>
</resources>
