<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jonathancromie.brisbaneevents.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionLayout="@xml/searchable"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="collapseActionView|ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_title"
                android:orderInCategory="100"
                android:title="@string/sort_title"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_date"
                android:orderInCategory="200"
                android:title="@string/sort_date"
                app:showAsAction="never" />
        </menu>

    </item>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu>
